# ESP32-Clock

./: .gitignore  CLAUDE.md  README.md  sdkconfig  sdkconfig.defaults
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-05-21-mqtt-music-player-ui.md
docs/superpowers/specs/: 2026-05-21-mqtt-music-player-design.md
main/: CMakeLists.txt  clock_secrets_example.h  main.cpp  music_mqtt.cpp  music_mqtt.h  music_player_screen.cpp  music_player_screen.h  music_state.cpp  music_state.h  screen_manager.cpp  screen_manager.h  screen_nav.cpp  screen_nav.h
main/app/features/clock/: clock_presenter.cpp  clock_presenter.h
main/app/features/music/: music_model.cpp  music_presenter.cpp  music_view.cpp  music_view.h
main/app/features/music/util/: music_background.cpp
main/app/features/music/widgets/: background_blur_service.cpp  background_image.cpp  background_image.h  background_widget.cpp  background_widget.h  visualizer_widget.cpp
main/app/screens/: gesture_manager.cpp  gesture_manager.h  screen.h  screen_manager.cpp
main/app/services/: cover_service.cpp  cover_service.h  mqtt_service.cpp  mqtt_service.h  network_service.cpp  power_service.cpp  time_service.cpp
main/assets/: README.md
main/platform/: lvgl_port.cpp
sim/: CMakeLists.txt  README.md  lv_conf.h  main.cpp  sim_assets.cpp  sim_assets.h  sim_music_mqtt.cpp  sim_music_mqtt.h
sim/include/: esp_heap_caps.h  esp_log.h
tests/: CMakeLists.txt  test_clock_model.cpp  test_clock_presenter.cpp  test_event_bus.cpp  test_event_queue.cpp  test_mqtt_service_cover_pump.cpp  test_mqtt_service_music_parse.cpp  test_music_background.cpp  test_music_background_image.cpp  test_music_model.cpp  test_music_mqtt_ingest_service_event.cpp  test_music_player_icon_geometry.cpp  test_music_presenter_eventbus.cpp  test_music_state.cpp  test_music_time_format.cpp  test_music_visualizer.cpp  test_power_mgr_idle_mode.cpp  test_power_mgr_voltage.cpp  test_power_service.cpp  test_screen_nav.cpp  test_time_service.cpp
tests/stubs/: lcd_bl_pwm_bsp.h  lvgl.h
tests/stubs/freertos/: FreeRTOS.h
